--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -4,64 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up | SkillSwap</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css">
 </head>
+<body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <p>
+                    SkillSwap
+                </p>
+            </div>
+        </nav>
+    </header>
 
-<body class="signup">
+    <main class="signup">
 
-    <div class="signup-container">
-        <h2>Sign Up</h2>
-        <form class="signing-up" action="/signing-up" method="post">
+        <div class="signup-container">
+            <h2>Sign Up</h2>
+            <form class="signing-up" action="/signing-up" method="post">
 
-            <label for="email" class="form-label">Email</label>
-            {% for message in get_flashed_messages() %}
-                {% if "Email" in message %}
-                    <div class="alert-message" role="alert">
-                        {{ message }}
-                    </div>
-                {% endif %}
-            {% endfor %}
-            <input type="email" class="form-control" id="email" name="email" required>
+                <!-- <label for="email" class="form-label">Email</label> -->
+                {% for message in get_flashed_messages() %}
+                    {% if "Email" in message %}
+                        <div class="alert-message" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                <div class="labeling">
+                    <i class="bi bi-envelope"></i>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                </div>
+                <!-- <label for="first-name" class="form-label">First Name</label> -->
 
-            <label for="first-name" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="first-name" name="first-name" required>
+                <div class="labeling">
+                    <i class="bi bi-pencil-fill"></i>
+                    <input type="text" class="form-control" id="first-name" name="first-name" placeholder="First Name" required>
+                </div>
 
-            <label for="last-name" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="last-name" name="last-name" required>
+                <!-- <label for="last-name" class="form-label">Last Name</label> -->
+                <div class="labeling">
+                    <i class="bi bi-pencil-fill"></i>
+                    <input type="text" class="form-control" id="last-name" name="last-name" placeholder="Last Name">
+                </div>
 
-            <label for="username" class="form-label">Username</label>
-            {% for message in get_flashed_messages() %}
-                {% if "Username" in message %}
-                    <div class="alert-message" role="alert">
-                        {{ message }}
-                    </div>
-                {% endif %}
-            {% endfor %}
-            <input type="text" class="form-control" id="username" name="username" required>
+                <!-- <label for="username" class="form-label">Username</label> -->
+                {% for message in get_flashed_messages() %}
+                    {% if "Username" in message %}
+                        <div class="alert-message" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                <div class="labeling">
+                    <i class="bi bi-person"></i>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
+                </div>
+                <!-- <label for="password" class="form-label">Password</label> -->
+                {% for message in get_flashed_messages() %}
+                    {% if "Password" in message %}
+                        <div class="alert-message" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                <div class="labeling">
+                    <i class="bi bi-lock"></i>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+                </div>
+                <!-- <label for="confirm-password" class="form-label">Confirm Password</label> -->
 
-            <label for="password" class="form-label">Password</label>
-            {% for message in get_flashed_messages() %}
-                {% if "Password" in message %}
-                    <div class="alert-message" role="alert">
-                        {{ message }}
-                    </div>
-                {% endif %}
-            {% endfor %}
-            <input type="password" class="form-control" id="password" name="password" required>
-            <label for="confirm-password" class="form-label">Confirm Password</label>
+                {% for message in get_flashed_messages() %}
+                    {% if "Passwords do not match" in message %}
+                        <div class="alert-message" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                <div class="labeling">
+                    <i class="bi bi-lock"></i>
+                    <input type="password" class="form-control" id="confirm-password" name="confirm-password" placeholder="Confirm Password" required>
+                </div>
+                <button class="sign-up" type="submit">Sign Up</button>
+            </form>
 
-            {% for message in get_flashed_messages() %}
-                {% if "Passwords do not match" in message %}
-                    <div class="alert-message" role="alert">
-                        {{ message }}
-                    </div>
-                {% endif %}
-            {% endfor %}
-            
-            <input type="password" class="form-control" id="confirm-password" name="confirm-password" required>
-            <button class="sign-up" type="submit">Sign Up</button>
-        </form>
-    </div>
+            <a href="/">Already have an account? Sign in here</a>
+        </div>
 
+    </main>
 </body>
 </html>
